--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,9 +18,15 @@ allprojects {
     repositories {
         google()
         jcenter()
-
-        maven { url  "http://dl.bintray.com/onyx-intl/maven" }
         maven { url "https://jitpack.io" }
+        maven { url  "http://dl.bintray.com/dasar/maven" }
+        maven { url  "http://dl.bintray.com/onyx-intl/maven" }
+        maven { url "${System.env.HOME}/.m2/repository" }
+        maven { url "http://mvn.leancloud.cn/nexus/content/repositories/releases" }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
