--- a/app/OnyxDemo/src/main/AndroidManifest.xml
+++ b/app/OnyxDemo/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.onyx.brightnesssample">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
