--- a/app/OnyxDemo/build.gradle
+++ b/app/OnyxDemo/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 23
         targetSdkVersion 27
         compileSdkVersion 27
         multiDexEnabled true
@@ -32,6 +32,7 @@ android {
     }
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
     }
 
 
@@ -53,6 +54,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.greenrobot:eventbus:3.0.0"
     api "github.yokeyword.fix:fragmentation:1.3.7.3"
-    api 'com.onyx.android.sdk:onyxsdk-device:1.1.0'
+    api 'com.android.support:multidex:1.0.1'
+    api 'com.onyx.android.sdk:onyxsdk-device:1.1.6'
 
 }
